# ai-manual-creator

./: .env.example  .gitignore  DESIGN.md  README.md  compile.py  config.example.json  main.py  pyproject.toml  test_agent.py  test_browser.py
core/: agent.py  prompts.py
core/tools/: code_tools.py  web_tools.py
mock_app/: dashboard.html  index.html  login.html  settings.html
portal/: index.html  package-lock.json  package.json
portal/public/docs/: catalog.json
portal/public/docs/user_settings/: user_settings.md
portal/src/: App.css  App.jsx  index.css
