[project]
name = "ai-manual-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "litellm>=1.89.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "edge-tts>=6.1.12",
    "moviepy>=1.0.3",
]
